[package]
name = "d7050e"
version = "0.1.0"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"

build = "build.rs" # LALRPOP preprocessing

[build-dependencies.lalrpop] 
version = "0.19.0"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19.0"
regex = "1.3.9"

# lalrpop = {version = "0.19.0", features = ["lexer"] }

[[bin]]
name = "compiler"
path = "src/compiler/main.rs"